# dueros-client

./: README.md  duer_audio_player  duer_daemon  duer_link  duer_linux  duer_timer  install.sh  version.txt
deps_libs/: libavformat.so.56.40.101  libavutil.so.54.31.100  libswresample.so.1.2.101
output_path/demo/: CMakeLists.txt  install.sh  main_demo.cpp  record.pcm
output_path/deps_libs/: libcharset.so.1.0.0  libcrypto.so.1.0.0  libcurl.so.4.3.0  libiconv.so.2.5.1  libjsoncpp.so.1.8.0  libjsoncpp.so.11  libssl.so.1.0.0  libz.so.1.2.8
output_path/headers/: BDuerConstant.h  BDuerMessage.h  BDuerSDK.h  Device.h  DeviceCreater.h  DeviceProvider.h  IBDuerSDKCallback.h
output_path/resources/: xiaodu_nihao_2.raw
output_path/sdkconfigs/: config.json
